--- a/src/idea.ini
+++ b/src/idea.ini
@@ -1,1 +1,51 @@
+#include <SPI.h>
+#include <WiFiNINA.h>
+#include <WiFiUdp.h>
 
+int status = WL_IDLE_STATUS;
+
+#include "arduino_secrets.h"
+char ssid[] = SECRET_SSID;
+char pass[] = SECRET_PASS;
+
+unsigned int localPort = 2390;
+
+IPAddress timeServer(xxx, y, zzz, aaa);
+
+const int NTP_PACKET_SIZE = 48;
+
+WiFiUdp Udp;
+
+void setup() {
+  Serial.begin(9600);
+start
+  
+  start wifi
+  start rtc
+
+  find network (wifi)
+  get time from ntp server
+  set time to rtc
+}
+
+void loop
+  timed on/off
+  set hours plus randomness
+  
+  at hours (when on (except 4 pm)) 
+    turn off for few seconds
+    blink hour 'chimes' - see big ben timing!
+    
+  at quarters (when on)
+    just blink off once (15 min past)
+    blink off twice (30 past)
+    blink off thrice (45 past).
+    
+  at 4pm
+    turn off for a few seconds
+    blink tea-for-two rhythm.
+    
+  at 3am get time from ntp and reset rtc
+  
+
+    
