--- a/src/idea.ini
+++ b/src/idea.ini
@@ -8,19 +8,31 @@ int status = WL_IDLE_STATUS;
 char ssid[] = SECRET_SSID;
 char pass[] = SECRET_PASS;
 
-unsigned int localPort = 2390;
+unsigned int localUdpPort = 2390;
 
 IPAddress timeServer(xxx, y, zzz, aaa);
 
 const int NTP_PACKET_SIZE = 48;
+byte packetBuffer[NTP_PACKET_SIZE];
 
-WiFiUdp Udp;
+WiFiUDP Udp;
 
 void setup() {
-  Serial.begin(9600);
-start
+  Serial.begin(9600); //might need the while (!Serial) {;} thing here for USB ports. Try without first.
   
-  start wifi
+  while (status != WL_CONNECTED) {
+    Serial.print("Attempting to connect to SSID: ");
+    Serial.println(ssid);
+    status = WiFi.begin(ssid, pass);
+    delay(10000);
+  }
+
+  Serial.println("Connected to wifi");
+  printWifiStatus();
+
+  Serial.println("\nStarting connection to server...");
+  Udp.begin(localUdpPort);
+  
   start rtc
 
   find network (wifi)
@@ -47,5 +59,17 @@ void loop
     
   at 3am get time from ntp and reset rtc
   
+void printWifiStatus() {
+  Serial.print("SSID: ");
+  Serial.println(WiFi.SSID());
 
+  IPAddress ip = WiFi.localIP();
+  Serial.print("IP Address: ");
+  Serial.println(ip);
+
+  long rssi = WiFi.RSSI();
+  Serial.print("signal strength (RSSI):");
+  Serial.print(rssi);
+  Serial.println(" dBm");
+}
     
